<resources>
    <string name="app_name">ListaDeCompras</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="label_nome_produto">Insira o nome do produto</string>
    <string name="adicionar_novo_produto">Adicionar Novo Produto</string>
    <string name="novo_item">Novo Item</string>
    <string name="nome_produto">Nome Produto:</string>
    <string name="quantidade">Quantidade</string>
    <string name="generic_number">000</string>
    <string name="generic_price">R$ 00,00</string>
    <string name="preco_total">Preço Total</string>
    <string name="insira_quantidade_do_produto">Insira quantidade do produto</string>
    <string name="insira_preco_unit_rio">Insira preço unitário</string>
</resources>