<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">


    <TextView
        android:id="@+id/tv_position_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_label_nome_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_produto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_nome_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/novo_item"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_nome_produto" />

    <TextView
        android:id="@+id/tv_label_quantidade_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantidade"
        app:layout_constraintTop_toBottomOf="@+id/tv_nome_item"
        android:textSize="18dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_quantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generic_number"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_quantidade_produto"
        android:textSize="18dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_label_preco_unitario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Preço Unitário"
        app:layout_constraintTop_toBottomOf="@+id/tv_quantidade"
        android:textSize="18dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_preco_unitario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generic_price"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_preco_unitario"
        android:textSize="18dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_label_preco_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preco_total"
        app:layout_constraintTop_toBottomOf="@+id/tv_preco_unitario"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_preco_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generic_price"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_preco_total"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cancel_10"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"/>


</androidx.constraintlayout.widget.ConstraintLayout>