<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp">

    <TextView
        android:id="@+id/tv_label_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nome_produto"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_nome" />


    <TextView
        android:id="@+id/tv_label_quantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insira_quantidade_do_produto"
        app:layout_constraintTop_toBottomOf="@+id/et_nome" />

    <EditText
        android:id="@+id/et_quantidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_quantidade" />
    <TextView
        android:id="@+id/tv_label_preco_unitario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insira_preco_unit_rio"
        app:layout_constraintTop_toBottomOf="@+id/et_quantidade" />

    <EditText
        android:id="@+id/et_preco_unitario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_preco_unitario" />
    <Button
        android:id="@+id/bt_adicionar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_novo_produto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_preco_unitario" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_produtos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_adicionar"/>
</androidx.constraintlayout.widget.ConstraintLayout>